# BreakoutExperiment

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  launch.vs.json  vcpkg.json
bdd/: bdd_audio.cpp  bdd_ball.cpp  bdd_bricks.cpp  bdd_collision.cpp  bdd_game_states.cpp  bdd_helpers.h  bdd_paddle.cpp  bdd_scoring.cpp  bdd_startup.cpp
features/: audio.feature  ball.feature  bricks.feature  code_quality.feature  collision.feature  game_over.feature  paddle.feature  scoring.feature  startup.feature  win_condition.feature
features/step_definitions/: ball_steps.cpp  brick_steps.cpp  collision_steps.cpp  game_state_steps.cpp  paddle_steps.cpp  scoring_steps.cpp  startup_steps.cpp  world.h
src/: AudioManager.cpp  AudioManager.h  Ball.cpp  Ball.h  Brick.cpp  Brick.h  CollisionDetector.cpp  CollisionDetector.h  Constants.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  Renderer.cpp  Renderer.h  ScoreManager.cpp  ScoreManager.h  Types.h  main.cpp
tests/: test_audio_manager.cpp  test_ball.cpp  test_brick.cpp  test_collision_detector.cpp  test_game_state.cpp  test_main.cpp  test_paddle.cpp  test_score_manager.cpp
